--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "ajv": "^6.6.2",
+    "ajv": "^6.7.0",
     "axios": "^0.18.0",
-    "vue": "^2.5.21",
+    "vue": "^2.5.22",
     "vue-axios": "^2.1.4",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
@@ -31,10 +31,10 @@
     "chalk": "^2.4.2",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^4.0.0-beta.5",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
@@ -46,13 +46,14 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
+    "url-loader": "^1.1.2",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.21",
-    "webpack": "^3.6.0",
+    "vue-template-compiler": "^2.5.22",
+    "webpack": "^4.0.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.2.1"
   },
   "engines": {
